<resources>
    <string name="app_name">InstagramClone</string>
    <string name="enter_password">Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="btn_log_in">Log In</string>
    <string name="tv_signUp">Dont have an account?</string>
    <string name="btn_sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_full_name">Full name</string>
    <string name="enter_user_name">Username</string>
    <string name="tv_terms">By signing up, you agree to our Terms, Data Policiy and Cookies Policy</string>
</resources>